@@ -1,3 +1,7 @@
+2007-08-02  Ben Motmans <ben.motmans@gmail.com>
+
+	* SqliteSchemaProvider.cs: CreateTrigger implementation
+
 2007-08-01  Ben Motmans <ben.motmans@gmail.com>
 
 	* SqliteSchemaProvider.cs: Catch exceptions and notify the user and various
